@@ -393,6 +393,7 @@ _GL_INLINE_HEADER_BEGIN
  * @sa #LANG_auto_RETURN_TYPE
  * @sa #LANG_auto_STORAGE
  * @sa #LANG_auto_TYPE
+ * @sa #LANG_auto_TYPE_MULTI_DECL
  */
 #define LANG_auto_PARAMETER             LANG_CPP_MIN(20)
 
@@ -403,6 +404,7 @@ _GL_INLINE_HEADER_BEGIN
  * @sa #LANG_auto_RETURN_TYPE
  * @sa #LANG_auto_STORAGE
  * @sa #LANG_auto_TYPE
+ * @sa #LANG_auto_TYPE_MULTI_DECL
  */
 #define LANG_auto_POINTER_TYPE          LANG_CPP_MIN(11)
 
@@ -413,6 +415,7 @@ _GL_INLINE_HEADER_BEGIN
  * @sa #LANG_auto_POINTER_TYPE
  * @sa #LANG_auto_STORAGE
  * @sa #LANG_auto_TYPE
+ * @sa #LANG_auto_TYPE_MULTI_DECL
  */
 #define LANG_auto_RETURN_TYPE           LANG_CPP_MIN(14)
 
@@ -423,6 +426,7 @@ _GL_INLINE_HEADER_BEGIN
  * @sa #LANG_auto_POINTER_TYPE
  * @sa #LANG_auto_RETURN_TYPE
  * @sa #LANG_auto_TYPE
+ * @sa #LANG_auto_TYPE_MULTI_DECL
  */
 #define LANG_auto_STORAGE               LANG_C_CPP_MAX(17,03)
 
@@ -433,8 +437,21 @@ _GL_INLINE_HEADER_BEGIN
  * @sa #LANG_auto_POINTER_TYPE
  * @sa #LANG_auto_RETURN_TYPE
  * @sa #LANG_auto_STORAGE
+ * @sa #LANG_auto_TYPE_MULTI_DECL
  */
 #define LANG_auto_TYPE                  LANG_C_CPP_MIN(23,11)
+
+/**
+ * Languages the `auto` keyword as a type declaring multiple variables is
+ * supported in.
+ *
+ * @sa #LANG_auto_PARAMETER
+ * @sa #LANG_auto_POINTER_TYPE
+ * @sa #LANG_auto_RETURN_TYPE
+ * @sa #LANG_auto_STORAGE
+ * @sa #LANG_auto_TYPE
+ */
+#define LANG_auto_TYPE_MULTI_DECL       LANG_CPP_MIN(11)
 
 /**
  * Languages the `_BitInt` keyword is supported in.
