@@ -1,0 +1,3 @@
+explain auto x, y
+        ^
+9: error: "auto" with multiple declarators is not supported in C
